[package]
name = "printergeist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.30"
printers = "2.0.0"
serde_json = "1.0.117"
tokio = {version ="1.37.0", features = ["full"] }  
tokio-tungstenite = {version="0.21.0", features = ["native-tls"]}
