[package]
name = "printergeist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.30"
printers =  { git = "https://github.com/JuliDi/rust-printers.git", branch = "master" }
reqwest = {version = "0.12.4", features = ["blocking"] }
serde_json = "1.0.117"
tempfile = "3.10.1"
tokio = {version ="1.37.0", features = ["full"] }  
tokio-tungstenite = {version="0.21.0", features = ["native-tls"]}
